# data_deduplication

./: .gitignore  README.md  config.yaml  pyproject.toml
Benchmark/: bench_core.py  bench_news.py  create_test_jsonl.py  eval.py  grouped_bar_chart.py
dedup_tool/: cli.py
dedup_tool/config/: __init__.py  settings.py
dedup_tool/core/: __init__.py  minhash.py  semantic.py  simhas.py  simhash.py  strategy.py  strategyregistry.py
dedup_tool/index/: __init__.py  lsh.py
dedup_tool/utils/: __init__.py  batch_reader.py  embeded.py  fastembed_verifier.py  sha_hash.py  tokenizers.py  union_find.py
interactive_search/: data_loader.py  main.py  search_engine.py  utils.py
