[project]
name = "data-dedupliacation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "nltk>=3.9.2",
    "numpy>=2.0.0",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "typer>=0.9.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.8.0",
    "xxhash>=3.6.0",
    "fastembed>=0.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "datasets>=4.8.5",
    "orjson>=3.11.9",
]
[project.optional-dependencies]
cpu = [
    "onnxruntime==1.20.1",
    "faiss-cpu>=1.13.2",
]
gpu = [
    "onnxruntime-gpu>=1.18.0",
    "fastembed-gpu",
    "faiss-gpu-cu12>=1.8.0",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
